--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.6 Group Commit.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.6 Group Commit.md
@@ -514,7 +514,7 @@ group_commit_wal_path
     group_commit_wal_path=/data1/storage/wal;/data2/storage/wal;/data3/storage/wal
     ```
 
-group_commit_memory_rows_for_max_filter_ratio**
+group_commit_memory_rows_for_max_filter_ratio
 
 * 描述：当 group commit 导入的总行数不高于该值， `max_filter_ratio` 正常工作，否则不工作
 
