--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.3 导入数据格式.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.3 导入数据格式.md
@@ -32,14 +32,14 @@ Doris 支持对csv、json、parquet、orc格式的数据文件进行导入。本
 
 | 参数 | 参数说明 | 指定方法 |
 | -- | -- | -- |
-| 行分隔符 | 用于指定导入文件中的换行符，默认为 `\n` 。可以使用做多个字符的组合作为换行符。对于Windows系统上的文本文件，可能需要指定换行符为 `\r\n` 。某些程序在写入文件时可能会使用 `\r` 作为行终止符，需要指定 `\r` 为换行符。 | <br>- Stream Load： `line_delimiter` Http Header<br>- Broker Load : `LINES TERMINATED BY`<br>- Routine Load : 不支持<br>- MySQL Load : `LINES TERMINATED BY` |
-| 列分隔符 | 用于指定导入文件中的列分隔符，默认为 `\t` 。如果是不可见字符，则需要加 `\x` 作为前缀，使用十六进制来表示分隔符。可以使用多个字符的组合作为列分隔符。因为 MySQL 协议会做转义处理，如果列分隔符是不可见字符，通过 MySQL 协议提交的导入请求需要在列分隔字符前面多加一个反斜线 `\` 。例如，Hive的文件分隔符为 `\x01` ，Broker Load 需要传入 `\\x01` 。 | <br>- Stream Load： `columns_delimiter Http Header`<br>- Broker Load : `COLUMNS TERMINATED BY`<br>- Routine Load : `COLUMNS TERMINATED BY`<br>- MySQL Load : `COLUMNS TERMINATED BY` |
-| 包围符 | 当 CSV 数据字段中含有行分隔符或列分隔符时，为防止意外截断，可指定单字节字符作为包围符起到保护作用，默认值： `NONE` 。最常用包围符为单引号 `'` 或双引号 `"` 。例如列分隔符为 `,` ，包围符为 `'` ，数据为 `a,'b,c'` ，则 `b,c` 会被解析为一个字段。 | <br>- Stream Load： `enclose` Http Header<br>- Broker Load : `PROPERTIES` 里指定 `enclose`<br>- Routine Load: `PROPERTIES` 里指定 `enclose`<br>- MySQL Load: `PROPERTIES` 里指定 `enclose` |
-| 转义符 | 用于转义在字段中出现的与包围符相同的字符。例如数据为 `a,'b,'c'` ，包围符为 `'` ，希望 `b,'c` 被作为一个字段解析，则需要指定单字节转义符，例如 `\` ，将数据修改为 `a,'b,\'c'` 。 | <br>- Stream Load： `escape` Http Header<br>- Broker Load : `PROPERTIES` 里指定 `escape`<br>- Routine Load: `PROPERTIES` 里指定 `escape`<br>- MySQL Load: `PROPERTIES` 里指定 `escape` |
-| 跳过的行数 | 跳过 CSV 文件的前几行，整数类型，默认值为 0。当设置 format 设置为 `csv_with_names` 或 `csv_with_names_and_types` 时，该参数会失效。 | <br>- Stream Load： `skip_lines` Http Header<br>- Broker Load : `PROPERTIES` 里指定 `skip_lines`<br>- MySQL Load: 不支持<br>- Routine Load: 不支持 |
-| 压缩格式 | CSV 格式数据支持以下压缩格式：plain, gz, lzo, bz2, lz4, LZ4FRAME,lzop, deflate。默认是plain，表示不压缩。不支持 tar 格式， tar 只是归档打包工具，不是压缩格式。 | <br>- Stream Load： `compress_type` Http Header<br>- Broker Load : `COMPRESS_TYPE AS`<br>- MySQL Load: 不支持<br>- Routine Load: 不支持 |
+| 行分隔符 | 用于指定导入文件中的换行符，默认为 `\n` 。可以使用做多个字符的组合作为换行符。对于Windows系统上的文本文件，可能需要指定换行符为 `\r\n` 。某些程序在写入文件时可能会使用 `\r` 作为行终止符，需要指定 `\r` 为换行符。 |  - Stream Load： `line_delimiter` Http Header<br>- Broker Load : `LINES TERMINATED BY`<br>- Routine Load : 不支持<br>- MySQL Load : `LINES TERMINATED BY` |
+| 列分隔符 | 用于指定导入文件中的列分隔符，默认为 `\t` 。如果是不可见字符，则需要加 `\x` 作为前缀，使用十六进制来表示分隔符。可以使用多个字符的组合作为列分隔符。因为 MySQL 协议会做转义处理，如果列分隔符是不可见字符，通过 MySQL 协议提交的导入请求需要在列分隔字符前面多加一个反斜线 `\` 。例如，Hive的文件分隔符为 `\x01` ，Broker Load 需要传入 `\\x01` 。 |  - Stream Load： `columns_delimiter Http Header`<br>- Broker Load : `COLUMNS TERMINATED BY`<br>- Routine Load : `COLUMNS TERMINATED BY`<br>- MySQL Load : `COLUMNS TERMINATED BY` |
+| 包围符 | 当 CSV 数据字段中含有行分隔符或列分隔符时，为防止意外截断，可指定单字节字符作为包围符起到保护作用，默认值： `NONE` 。最常用包围符为单引号 `'` 或双引号 `"` 。例如列分隔符为 `,` ，包围符为 `'` ，数据为 `a,'b,c'` ，则 `b,c` 会被解析为一个字段。 |  - Stream Load： `enclose` Http Header<br>- Broker Load : `PROPERTIES` 里指定 `enclose`<br>- Routine Load: `PROPERTIES` 里指定 `enclose`<br>- MySQL Load: `PROPERTIES` 里指定 `enclose` |
+| 转义符 | 用于转义在字段中出现的与包围符相同的字符。例如数据为 `a,'b,'c'` ，包围符为 `'` ，希望 `b,'c` 被作为一个字段解析，则需要指定单字节转义符，例如 `\` ，将数据修改为 `a,'b,\'c'` 。 |  - Stream Load： `escape` Http Header<br>- Broker Load : `PROPERTIES` 里指定 `escape`<br>- Routine Load: `PROPERTIES` 里指定 `escape`<br>- MySQL Load: `PROPERTIES` 里指定 `escape` |
+| 跳过的行数 | 跳过 CSV 文件的前几行，整数类型，默认值为 0。当设置 format 设置为 `csv_with_names` 或 `csv_with_names_and_types` 时，该参数会失效。 |  - Stream Load： `skip_lines` Http Header<br>- Broker Load : `PROPERTIES` 里指定 `skip_lines`<br>- MySQL Load: 不支持<br>- Routine Load: 不支持 |
+| 压缩格式 | CSV 格式数据支持以下压缩格式：plain, gz, lzo, bz2, lz4, LZ4FRAME,lzop, deflate。默认是plain，表示不压缩。不支持 tar 格式， tar 只是归档打包工具，不是压缩格式。 |  - Stream Load： `compress_type` Http Header<br>- Broker Load : `COMPRESS_TYPE AS`<br>- MySQL Load: 不支持<br>- Routine Load: 不支持 |
 
-#### 1.3.1 导入示例
+### 1.4 导入示例
 
 Stream Load
 
