--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.3 Linux 平台直接编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.3 Linux 平台直接编译.md
@@ -1,10 +1,10 @@
 # 1.1.3 Linux 平台直接编译
 
-这里使用 Ubuntu 16.04 及以上系统来直接编译。
+这里使用 `Ubuntu 16.04` 及以上系统来直接编译。
 
 1. 确保拥有以下系统依赖
 
-    GCC 10+, Oracle JDK 8+, Python 2.7+, Apache Maven 3.5+, CMake 3.19.2+ , Bison 3.0+
+    `GCC 10+` ,  `Oracle JDK 8+` ,  `Python 2.7+` ,  `Apache Maven 3.5+` ,  `CMake 3.19.2+`  ,  `Bison 3.0+`
 
     ```shell
     sudo apt install build-essential openjdk-8-jdk maven cmake byacc flex automake libtool-bin bison binutils-dev libiberty-dev zip unzip libncurses5-dev curl git ninja-build python
@@ -14,7 +14,7 @@
     sudo apt-get install autoconf automake libtool autopoint
     ```
 
-2. 与使用 Docker 开发镜像编译一样，编译之前先检查是否支持 AVX2 指令
+2. 与使用 `Docker` 开发镜像编译一样，编译之前先检查是否支持 `AVX2` 指令
 
     ```shell
     cat /proc/cpuinfo | grep avx2
