--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.4 Arm 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.4 Arm 平台上编译.md
@@ -1,8 +1,8 @@
 # 1.1.4 Arm 平台上编译
 
-本文档介绍如何在 ARM64 平台上编译 Doris。
+本文档介绍如何在 `ARM64` 平台上编译 `Doris` 。
 
-注意，该文档仅作为指导性文档。在不同环境中编译可能出现其他错误。如遇问题，欢迎向 Doris 提出 Issue 或解决方案。
+注意，该文档仅作为指导性文档。在不同环境中编译可能出现其他错误。如遇问题，欢迎向 `Doris` 提出 `Issue` 或解决方案。
 
 !!! tip
 
@@ -117,13 +117,13 @@
 
 ### 2.3 Ubuntu 20.04 软件环境安装
 
-1. 更新 apt-get 软件库
+1. 更新 `apt-get` 软件库
 
     ```shelll
     apt-get update
     ```
 
-2. 重新配置 shell
+2. 重新配置 `shell`
 
     ```shell
     # Ubuntu 的 shell 默认安装的是 dash，而不是 bash，要切换成 bash 才能执行，运行以下命令查看 sh 的详细信息，确认 shell 对应的程序是哪个：
@@ -227,20 +227,20 @@
 
 ## 3 编译
 
-目前 ARM 环境仅推荐使用 LDB Toolchain 进行编译。
+目前 `ARM` 环境仅推荐使用 `LDB Toolchain` 进行编译。
 
-在 ARM 平台编译 Doris 时，请关闭 AVX2 和 LIBUNWIND 三方库：
+在 `ARM` 平台编译 `Doris` 时，请关闭 `AVX2` 和 `LIBUNWIND` 三方库：
 
 ```shell
 export USE_AVX2=OFF
 export USE_UNWIND=OFF
 ```
 
-然后参考 使用 LDB Toolchain 编译文档，进行编译。
+然后参考使用 `LDB Toolchain` 编译文档，进行编译。
 
 ## 4 常见问题
 
-1. 编译第三方库 libhdfs3.a，找不到文件夹
+1. 编译第三方库 `libhdfs3.a` ，找不到文件夹
 
     在执行编译安装过程中，出现了如下报错 `not found lib/libhdfs3.a file or directory` 。
 
@@ -253,17 +253,17 @@ export USE_UNWIND=OFF
     sh /opt/doris/thirdparty/build-thirdparty.sh
     ```
 
-    REPOSITORY_URL 中包含所有第三方库源码包和他们的历史版本。
+    `REPOSITORY_URL` 中包含所有第三方库源码包和他们的历史版本。
 
-2. Python 命令未找到
+2. `Python` 命令未找到
 
-    执行 build.sh 时抛出异常：
+    执行 `build.sh` 时抛出异常：
 
     ```shell
     /opt/doris/env.sh: line 46: python: command not found
     ```
 
-    问题可能原因：系统默认使用 `python2.7` 、 `python3.6` 、`python2` 、`python3` 这几个命令来执行 python 命令，Doris 安装依赖需要 python 2.7+ 版本即可，故只需要添加名为 `python` 的命令连接即可，使用版本 2 和版本 3 的都可以。
+    问题可能原因：系统默认使用 `python2.7` 、 `python3.6` 、`python2` 、`python3` 这几个命令来执行 `python` 命令， `Doris` 安装依赖需要 `python 2.7+` 版本即可，故只需要添加名为 `python` 的命令连接即可，使用版本 `2` 和版本 `3` 的都可以。
 
     解决方案：建立 `\usr\bin` 中 `python` 命令的软连接，比如：
 
@@ -271,9 +271,9 @@ export USE_UNWIND=OFF
     sudo ln -s /usr/bin/python2.7 /usr/bin/python
     ```
 
-3. 编译结束后没有 output 目录
+3. 编译结束后没有 `output` 目录
 
-    build.sh 执行结束后，目录中未发现 output 文件夹。
+    `build.sh` 执行结束后，目录中未发现 `output` 文件夹。
 
     问题原因：未成功编译，需重新编译。
 
@@ -285,7 +285,7 @@ export USE_UNWIND=OFF
 
 4. 剩余空间不足，编译失败
 
-    编译过程中报“构建 CXX 对象失败，提示剩余空间不足”。
+    编译过程中报“构建 `CXX` 对象失败，提示剩余空间不足”。
 
     ```shell
     fatal error: error writing to /tmp/ccKn4nPK.s: No space left on device 1112 | } // namespace doris::vectorized compilation terminated.
@@ -293,7 +293,7 @@ export USE_UNWIND=OFF
 
     解决方案：扩大设备剩余空间，如删除不需要的文件等。
 
-5. 在 pkg.config 中找不到 pkg.m4 文件
+5. 在 `pkg.config` 中找不到 `pkg.m4` 文件
 
     编译过程中出现了找不到文件错误，报错如下：
 
@@ -303,20 +303,20 @@ export USE_UNWIND=OFF
 
     通过查找上面的日志，发现是 `libxml2` 这个三方库在编译的时候出现了问题。
 
-    问题原因： `libxml2` 三方库编译错误，找不到 pkg.m4 文件。很有可能是：
+    问题原因： `libxml2` 三方库编译错误，找不到 `pkg.m4` 文件。很有可能是：
 
-    * Ubuntu 系统加载环境变量时有异常，导致 ldb 目录下的索引未被成功加载；
+    * `Ubuntu` 系统加载环境变量时有异常，导致 `ldb` 目录下的索引未被成功加载；
 
-    * 在 libxml2 编译时检索环境变量失效，导致编译过程没有检索到 ldb/aclocal 目录。
+    * 在 `libxml2` 编译时检索环境变量失效，导致编译过程没有检索到 `ldb/aclocal` 目录。
 
-    解决方案是：将 ldb/aclocal 目录下的 `pkg.m4` 文件拷贝至 libxml2/m4 目录下，重新编译第三方库
+    解决方案是：将 `ldb/aclocal` 目录下的 `pkg.m4` 文件拷贝至 `libxml2/m4` 目录下，重新编译第三方库
 
     ```shell
     cp /opt/software/ldb_toolchain/share/aclocal/pkg.m4 /opt/doris/thirdparty/src/libxml2-v2.9.10/m4
     sh /opt/doris/thirdparty/build-thirdparty.sh
     ```
 
-6. 执行测试 CURL_HAS_TLS_PROXY 失败
+6. 执行测试 `CURL_HAS_TLS_PROXY` 失败
 
     三方包编译过程报错，错误如下：
 
@@ -324,15 +324,15 @@ export USE_UNWIND=OFF
     -- Performing Test CURL_HAS_TLS_PROXY - Failed CMake Error at cmake/dependencies.cmake:15 (get_property): INTERFACE_LIBRARY targets may only have whitelisted properties. The property "LINK_LIBRARIES_ALL" is not allowed.
     ```
 
-    查看日志以后，发现内部是由于 curl `No such file or directory`
+    查看日志以后，发现内部是由于 `curl No such file or directory`
 
     ```shell
     fa``tal error: curl/curl.h: No such file or directory 2 | #include <curl/curl.h> compilation terminated. ninja: build stopped: subcommand failed.
     ```
 
-    问题原因：编译环境有错误，查看 gcc 版本后发现是系统自带的 9.3.0 版本，故而没有走 ldb 编译，需设置 ldb 环境变量。
+    问题原因：编译环境有错误，查看 `gcc` 版本后发现是系统自带的 `9.3.0` 版本，故而没有走 `ldb` 编译，需设置 `ldb` 环境变量。
 
-    解决方案：配置 ldb 环境变量：
+    解决方案：配置 `ldb` 环境变量：
 
     ```shell
     # 配置环境变量
@@ -350,32 +350,32 @@ export USE_UNWIND=OFF
 
     如有以下组件的错误提示，则统一以该方案解决：
 
-    * bison 相关：安装 bison-3.0.4 时报 fseterr.c 错误
+    * `bison` 相关：安装 `bison-3.0.4` 时报 `fseterr.c` 错误
 
-    * flex 相关：flex 命令未找到
+    * `flex` 相关： `flex` 命令未找到
 
-    * cmake 相关
+    * `cmake` 相关
 
-        * cmake 命令未找到
+        * `cmake` 命令未找到
 
-        * cmake 找不到依赖库
+        * `cmake` 找不到依赖库
 
-        * cmake 找不到 CMAKE_ROOT
+        * `cmake` 找不到 `CMAKE_ROOT`
 
-        * cmake 环境变量 CXX 中找不到编译器集
+        * `cmake` 环境变量 `CXX` 中找不到编译器集
 
-    * boost 相关：Boost.Build 构建引擎失败
+    * `boost` 相关： `Boost.Build` 构建引擎失败
 
-    * mysql 相关：找不到 mysql 的客户端依赖 a 文件
+    * `mysql` 相关：找不到 `mysql` 的客户端依赖 `a` 文件
 
-    * gcc 相关：GCC 版本需要 11+
+    * `gcc` 相关： `GCC` 版本需要 `11+`
 
-问题原因：都是未使用正确的 ldb-toolchain 进行编译。
+问题原因：都是未使用正确的 `ldb-toolchain` 进行编译。
 
 解决方案如下：
 
-* 检查 ldb-toolchain 环境变量是否配置
+* 检查 `ldb-toolchain` 环境变量是否配置
 
-* 查看 gcc 版本是否与使用 LDB-Toolchain 编译文档中推荐一致
+* 查看 `gcc` 版本是否与使用 `LDB-Toolchain` 编译文档中推荐一致
 
-* 删除 `ldb_toolchain_gen.aarch64.sh` 脚本执行后的 ldb 目录，重新执行并配置环境变量，验证 gcc 版本
+* 删除 `ldb_toolchain_gen.aarch64.sh` 脚本执行后的 `ldb` 目录，重新执行并配置环境变量，验证 `gcc` 版本
