--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.6 在 MacOS 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.6 在 MacOS 平台上编译.md
@@ -1,6 +1,6 @@
 # 1.1.6 在 MacOS 平台上编译
 
-本文介绍如何在 macOS 平台上编译源码。
+本文介绍如何在 `macOS` 平台上编译源码。
 
 !!! tip
 
@@ -8,20 +8,20 @@
 
 ## 1 环境要求
 
-* macOS 12 (Monterey) 及以上（Intel 和 Apple Silicon 均支持）
+* `macOS 12 (Monterey)` 及以上（ `Intel` 和 `Apple Silicon` 均支持）
 
-* Homebrew
+* `Homebrew`
 
 ## 2 源码编译
 
-1. 使用 Homebrew 安装依赖
+1. 使用 `Homebrew` 安装依赖
 
     ```shell
     brew install automake autoconf libtool pkg-config texinfo coreutils gnu-getopt \
     python@3 cmake ninja ccache bison byacc gettext wget pcre maven llvm@16 openjdk@11 npm
     ```
 
-    在 MacOS 上，由于 brew 没有提供 JDK8 的安装包，所以在这里使用了 JDK11。也可以自己手动下载安装 JDK8。
+    在 `MacOS` 上，由于 `brew` 没有提供 `JDK8` 的安装包，所以在这里使用了 `JDK11` 。也可以自己手动下载安装 `JDK8` 。
 
 2. 编译源码
 
@@ -29,11 +29,11 @@
     bash build.sh
     ```
 
-    Doris 源码编译时首先会下载三方库源码进行编译，为了节省编译时间，可以下载社区提供的三方库的预编译版本。参见下面的使用预编译三方库提速构建过程。
+    `Doris` 源码编译时首先会下载三方库源码进行编译，为了节省编译时间，可以下载社区提供的三方库的预编译版本。参见下面的使用预编译三方库提速构建过程。
 
 ## 3 启动
 
-1. 调大 file descriptors limit
+1. 调大 `file descriptors limit`
 
     ```shell
     # 通过 ulimit 命令调大 file descriptors limit 限制大小
@@ -48,14 +48,14 @@
     echo 'ulimit -n 65536' >>~/.zshrc
     ```
 
-2. 启动 BE
+2. 启动 `BE`
 
     ```shell
     cd output/be/bin
     ./start_be.sh --daemon
     ```
 
-3. 启动 FE
+3. 启动 `FE`
 
     ```shell
     cd output/fe/bin
@@ -64,7 +64,7 @@
 
 ## 4 使用预编译三方库进行提速
 
-可以在 Apache Doris Third Party Prebuilt 页面直接下载预编译好的第三方库，省去编译第三方库的过程，参考下面的命令。
+可以在 `Apache Doris Third Party Prebuilt` 页面直接下载预编译好的第三方库，省去编译第三方库的过程，参考下面的命令。
 
 ```shell
 cd thirdparty
