--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.1 集群环境要求.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.1 集群环境要求.md
@@ -13,24 +13,24 @@
 
 ### 2.1 防火墙配置
 
-在 Kubernetes 上部署 Doris 集群，建议关闭防火墙配置：
+在 `Kubernetes` 上部署 `Doris` 集群，建议关闭防火墙配置：
 
 ```shell
 systemctl stop firewalld
 systemctl disable firewalld
 ```
 
-如果无法关闭防火墙服务，可以根据规划，打开 FE 与 BE 端口：
+如果无法关闭防火墙服务，可以根据规划，打开 `FE` 与 `BE` 端口：
 
 !!! tip
 
-    如果无法关闭防火墙，需要根据 Kubernetes 映射规则打开 Doris 相应端口的防火墙。具体端口可以参考 Doris 集群端口规划。
+    如果无法关闭防火墙，需要根据 `Kubernetes` 映射规则打开 `Doris` 相应端口的防火墙。具体端口可以参考 `Doris` 集群端口规划。
 
 ### 2.2 禁用和关闭 swap
 
-在部署 Doris 时，建议关闭 swap 分区。
+在部署 `Doris` 时，建议关闭 `swap` 分区。
 
-通过以下命令可以永久关闭 swap 分区。
+通过以下命令可以永久关闭 `swap` 分区。
 
 ```shell
 echo "vm.swappiness = 0">> /etc/sysctl.conf
@@ -48,7 +48,7 @@ vi /etc/security/limits.conf
 
 ### 2.4 修改虚拟内存区域数量
 
-修改虚拟内存区域至少 2000000
+修改虚拟内存区域至少 `2000000`
 
 ```shell
 sysctl -w vm.max_map_count=2000000
@@ -56,7 +56,7 @@ sysctl -w vm.max_map_count=2000000
 
 ### 2.5 关闭透明大页
 
-在部署 Doris 时，建议关闭透明大页。
+在部署 `Doris` 时，建议关闭透明大页。
 
 ```shell
 echo madvise > /sys/kernel/mm/transparent_hugepage/enabled
