--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.1 快速部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.1 快速部署.md
@@ -1,22 +1,22 @@
 # 1.2.3.2.1 快速部署
 
-本章节介绍如何在测试 Kubernetes 集群中部署 Doris Operator 与 Doris 集群。 部署操作如下：
+本章节介绍如何在测试 `Kubernetes` 集群中部署 `Doris Operator` 与 `Doris` 集群。 部署操作如下：
 
-1. 创建 Kubernetes 测试集群
+1. 创建 `Kubernetes` 测试集群
 
-2. 部署 Doris Operator
+2. 部署 `Doris Operator`
 
-3. 部署 Doris 集群
+3. 部署 `Doris` 集群
 
-4. 连接访问 Doris 集群
+4. 连接访问 `Doris` 集群
 
 ## 1 创建 Kubernetes 测试集群
 
-此步骤简述在没有 k8s 集群的情况下如何快速搭建一套单节点 k8s 集群，如果已有 k8s 集群，此步骤请跳过。
+此步骤简述在没有 `k8s` 集群的情况下如何快速搭建一套单节点 `k8s` 集群，如果已有 `k8s` 集群，此步骤请跳过。
 
-Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kind 使用 Docker 容器作为节点，在本地创建和运行 Kubernetes 集群。
+`Kind` 是目前比较通用的创建本地 `Kubernetes` 测试环境的方案。 `Kind` 使用 `Docker` 容器作为节点，在本地创建和运行 `Kubernetes` 集群。
 
-1. 部署前置条件 部署前需要确保环境中具有以下组件：
+1. 部署前置条件部署前需要确保环境中具有以下组件：
 
     | 组件 | 版本要求 |
     | -- | -- |
@@ -24,7 +24,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     | kubectl | >=1.19 |
     | kind | >=0.8.0 |
 
-2. 使用 kind 部署 Kubernetes 集群 本例中使用 kind 0.10.0 版本安装 Kubernetes 集群，命令如下：
+2. 使用 `kind` 部署 `Kubernetes` 集群本例中使用 `kind 0.10.0` 版本安装 `Kubernetes` 集群，命令如下：
 
     ```shell
     kind create cluster --image kindest/node:v1.20.2 --name test-doris
@@ -44,7 +44,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     You can now use your cluster with:
     ```
 
-3. 检查 Kubernetes 集群状态 使用以下命令检查 Kubernete 集群状态:
+3. 检查 `Kubernetes` 集群状态使用以下命令检查 `Kubernete` 集群状态:
 
     ```shell
     kubectl cluster-info --context kind-test-doris
@@ -60,9 +60,9 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
 
 ## 2 部署 Doris Operator
 
-部署 Doris Operator 分成安装定义和部署 operator 服务两部分：
+部署 `Doris Operator` 分成安装定义和部署 `operator` 服务两部分：
 
-1. 安装 Doris Operator CRD 通过以下命令添加 Doris Operator 的自定义资源（CRD）：
+1. 安装 `Doris Operator CRD` 通过以下命令添加 `Doris Operator` 的自定义资源（ `CRD` ）：
 
     ```shell
     kubectl create -f https://raw.githubusercontent.com/selectdb/doris-operator/master/config/crd/bases/doris.selectdb.com_dorisclusters.yaml
@@ -74,7 +74,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     customresourcedefinition.apiextensions.k8s.io/dorisclusters.doris.selectdb.com created
     ```
 
-2. 安装 Doris Operator 通过以下命令安装 Doris Operator ：
+2. 安装 `Doris Operator` 通过以下命令安装 `Doris Operator` ：
 
     ```shell
     kubectl apply -f https://raw.githubusercontent.com/selectdb/doris-operator/master/config/operator/operator.yaml
@@ -92,7 +92,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     deployment.apps/doris-operator created
     ```
 
-3. 检查 Doris Operator 状态 通过以下命令检查 Doris Operator 的部署状态：
+3. 检查 `Doris Operator` 状态通过以下命令检查 `Doris Operator` 的部署状态：
 
     ```shell
     kubectl get pods -n doris
@@ -105,11 +105,11 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     doris-operator-7f578c86cb-nz6jn   1/1     Running   0          19m
     ```
 
-    Doris Operator 相关配置以及其他部署方式可参考部署 operator 部分。
+    `Doris Operator` 相关配置以及其他部署方式可参考部署 `operator` 部分。
 
 ## 3 部署 Doris 集群
 
-1. 下载模板 Doris 部署模板：
+1. 下载模板 `Doris` 部署模板：
 
     ```shell
     curl -O https://raw.githubusercontent.com/apache/doris-operator/master/doc/examples/doriscluster-sample.yaml
@@ -121,7 +121,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     kubectl apply -f doriscluster-sample.yaml
     ```
 
-3. 检查集群部署状态： 通过查看 pods 的状态检查集群的状态：
+3. 检查集群部署状态： 通过查看 `pods` 的状态检查集群的状态：
 
     ```shell
     kubectl get pods
@@ -150,24 +150,24 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
 
 ## 4 连接访问 Doris 集群
 
-在测试环境中快速部署的 Doris 集群，可以进入容器 FE 内部使用 MySQL Client 链接 Doris 进行测试操作。其他访问方式可参考集群配置访问章节配置使用。
+在测试环境中快速部署的 `Doris` 集群，可以进入容器 `FE` 内部使用 `MySQL Client` 链接 `Doris` 进行测试操作。其他访问方式可参考集群配置访问章节配置使用。
 
-1. 获取 FE 容器名称:
+1. 获取 `FE` 容器名称:
 
     ```shell
     kubectl get pod -n doris | grep fe
     doriscluster-sample-fe-0          1/1     Running   0          16m
     ```
 
-    在本例中，FE 容器名为 doriscluster-sample-fe-0。
+    在本例中， `FE` 容器名为 `doriscluster-sample-fe-0` 。
 
-2. 进入 FE 容器内部:
+2. 进入 `FE` 容器内部:
 
     ```shell
     kubectl -n doris exec -it doriscluster-sample-fe-0 /bin/bash
     ```
 
-3. 在 FE 容器内部使用 MySQL Client 链接 Doris 集群：
+3. 在 `FE` 容器内部使用 `MySQL Client` 链接 `Doris` 集群：
 
     ```shell
     mysql -uroot -P9030 -h127.0.0.1
