--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
@@ -1,32 +1,32 @@
 # 1.1.2 使用 LDB Toolchain 编译（推荐）
 
-本文档主要介绍如何使用 LDB Toolchain 编译 Doris。该方式目前作为 Docker 编译方式的补充，方便没有 Docker 环境的开发者和用户编译 Doris 源码。Doris 目前推荐的 LDB Toolchain 版本为 0.17, 其中含有 clang-16 和 gcc-11。
+本文档主要介绍如何使用 `LDB Toolchain` 编译 `Doris` 。该方式目前作为 `Docker` 编译方式的补充，方便没有 `Docker` 环境的开发者和用户编译 `Doris` 源码。 `Doris` 目前推荐的 `LDB Toolchain` 版本为 `0.17` , 其中含有 `clang-16` 和 `gcc-11` 。
 
 !!! tip
 
-    LDB Toolchain 全称 Linux Distribution Based Toolchain Generator，它有助于在几乎所有 Linux 发行版上编译现代 C++ 项目。
+    `LDB Toolchain` 全称 `Linux Distribution Based Toolchain Generator` ，它有助于在几乎所有 `Linux` 发行版上编译现代 `C++` 项目。
 
-感谢 Amos Bird 的贡献。
+感谢 `Amos Bird` 的贡献。
 
 ## 1 准备编译环境
 
-该方式适用于绝大多数 Linux 发行版（CentOS，Ubuntu 等）。
+该方式适用于绝大多数 `Linux` 发行版（ `CentOS` ， `Ubuntu` 等）。
 
 1. 下载 `ldb_toolchain_gen.sh`
 
-    可以从这里下载最新的 `ldb_toolchain_gen.sh` 。该脚本用于生成 LDB Toolchain
+    可以从这里下载最新的 `ldb_toolchain_gen.sh` 。该脚本用于生成 `LDB Toolchain`
 
     !!! tip
 
         更多信息，可访问 [https://github.com/amosbird/ldb_toolchain_gen](https://github.com/amosbird/ldb_toolchain_gen)
 
-2. 执行以下命令生成 ldb toolchain
+2. 执行以下命令生成 `ldb toolchain`
 
     ```shell
     sh ldb_toolchain_gen.sh /path/to/ldb_toolchain/
     ```
 
-    其中 `/path/to/ldb_toolchain/` 为安装 Toolchain 目录。执行成功后，会在 `/path/to/ldb_toolchain/` 下生成如下目录结构：
+    其中 `/path/to/ldb_toolchain/` 为安装 `Toolchain` 目录。执行成功后，会在 `/path/to/ldb_toolchain/` 下生成如下目录结构：
 
     ```shell
     ├── bin
@@ -39,15 +39,15 @@
 
 3. 下载并安装其他编译组件
 
-    * 下载 Java8，安装到 /path/to/java
+    * 下载 `Java8` ，安装到 `/path/to/java`
 
-        3.0（含）之后的版本，或 master 分支，请使用 Java 17。
+        `3.0` （含）之后的版本，或 `master` 分支，请使用 `Java 17` 。
 
-    * 下载 Apache Maven 3.6.3，安装到 /path/to/maven
+    * 下载 `Apache Maven 3.6.3` ，安装到 `/path/to/maven`
 
-    * 下载 Node v12.13.0，安装到 /path/to/node
+    * 下载 `Node v12.13.0` ，安装到 `/path/to/node`
 
-    * 对于不同的 Linux 发行版，可能默认包含的组件不同。因此可能需要安装一些额外的组件。下面以 CentOS6 为例，其他发行版类似：
+    * 对于不同的 `Linux` 发行版，可能默认包含的组件不同。因此可能需要安装一些额外的组件。下面以 `CentOS6` 为例，其他发行版类似：
 
         ```shell
         install required system packages
@@ -70,13 +70,13 @@
             make install
         ```
 
-4. 下载 Doris 源码
+4. 下载 `Doris` 源码
 
     ```shell
     git clone https://github.com/apache/doris.git
     ```
 
-    下载完成后，进入到 Doris 源码目录，创建 `custom_env.sh` 文件，并设置 PATH 环境变量，如：
+    下载完成后，进入到 `Doris` 源码目录，创建 `custom_env.sh` 文件，并设置 `PATH` 环境变量，如：
 
     ```shell
     export JAVA_HOME=/path/to/java/
@@ -90,9 +90,9 @@
 
 !!! tip
 
-    Doris 源码编译时首先会下载三方库进行编译，可以参考下文下载预编译版本的三方库，省去三方库编译
+    `Doris` 源码编译时首先会下载三方库进行编译，可以参考下文下载预编译版本的三方库，省去三方库编译
 
-1. 进入 Doris 源码目录，执行如下命令查看编译机器是否支持 AVX2 指令集
+1. 进入 `Doris` 源码目录，执行如下命令查看编译机器是否支持 `AVX2` 指令集
 
     ```shell
     cat /proc/cpuinfo | grep avx2
@@ -121,6 +121,6 @@
 https://github.com/apache/doris-thirdparty/releases
 ```
 
-这里我们提供了 Linux 和 MacOS 的预编译三方库。如果和你的编译运行环境一致，可以直接下载使用。
+这里我们提供了 `Linux` 和 `MacOS` 的预编译三方库。如果和你的编译运行环境一致，可以直接下载使用。
 
 下载好后，解压会得到一个 `installed/` 目录，将这个目录拷贝到 `thirdparty/` 目录下，之后运行 `build.sh` 即可。
