--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.5 Windows 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.5 Windows 平台上编译.md
@@ -1,6 +1,6 @@
 # 1.1.5 Windows 平台上编译
 
-本文介绍如何在 Windows 平台上编译源码，借助 Windows 的 WSL 功能，可以通过在 Windows 上启动 Linux 系统来编译 Doris。
+本文介绍如何在 `Windows` 平台上编译源码，借助 `Windows` 的 `WSL` 功能，可以通过在 `Windows` 上启动 `Linux` 系统来编译 `Doris` 。
 
 !!! tip
 
@@ -8,22 +8,22 @@
 
 ## 1 环境要求
 
-必须运行 Windows 10 版本 2004 及更高版本（内部版本 19041 及更高版本）或 Windows 11 才能使用。
+必须运行 `Windows 10` 版本 `2004` 及更高版本（内部版本 `19041` 及更高版本）或 `Windows 11` 才能使用。
 
 ## 2 编译步骤
 
 ### 2.1 安装 WSL2
 
-可参考微软官方 WSL 安装文档，不在此赘述。
+可参考微软官方 `WSL` 安装文档，不在此赘述。
 
 ### 2.2 编译 Doris
 
-通过使用 WSL2 启动的 Linux 子系统，选择任意 Doris 在 Linux 上的编译方式即可。
+通过使用 `WSL2` 启动的 `Linux` 子系统，选择任意 `Doris` 在 `Linux` 上的编译方式即可。
 
-* 使用 LDB Toolchain 编译 (推荐)
+* 使用 `LDB Toolchain` 编译 (推荐)
 
-* 使用 Docker 开发镜像编译（推荐）
+* 使用 `Docker` 开发镜像编译（推荐）
 
 ## 3 注意事项
 
-默认 WSL2 的发行版数据存储盘符为 C 盘，如有需要提前切换存储盘符，以防止系统盘符占满。
+默认 `WSL2` 的发行版数据存储盘符为 `C` 盘，如有需要提前切换存储盘符，以防止系统盘符占满。
