--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.1 快速部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.1 快速部署.md
@@ -1,6 +1,6 @@
 # 1.2.3.3.1 快速部署
 
-在 K8s 上部署存算分离集群需要提前部署好 FDB。如果是虚机部署需确保部署的虚机能够被 K8s 集群上的服务访问，部署请参考存算分离部署文档中部署前准备阶段介绍；如需要在 K8s 上部署请参考 FDB 在 K8s 上部署。 部署 Doris 存算分离集群分为两部分：Doris-Operator 及其相关依赖权限部署；Doris 存算分离集群定制化资源部署。
+在 `K8s` 上部署存算分离集群需要提前部署好 `FDB` 。如果是虚机部署需确保部署的虚机能够被 `K8s` 集群上的服务访问，部署请参考存算分离部署文档中部署前准备阶段介绍；如需要在 `K8s` 上部署请参考 `FDB` 在 `K8s` 上部署。 部署 `Doris` 存算分离集群分为两部分： `Doris-Operator` 及其相关依赖权限部署； `Doris` 存算分离集群定制化资源部署。
 
 ## 1 部署 Operator
 
@@ -17,7 +17,7 @@
     customresourcedefinition.apiextensions.k8s.io/doris.selectdb.com_dorisclusters.yaml created
     ```
 
-2. 部署 Doris-Operator 以及依赖的 RBAC 规则：
+2. 部署 `Doris-Operator` 以及依赖的 `RBAC` 规则：
 
     ```shell
     kubectl apply -f https://raw.githubusercontent.com/apache/doris-operator/master/config/operator/disaggregated-operator.yaml
@@ -39,7 +39,7 @@
     curl -O https://raw.githubusercontent.com/apache/doris-operator/master/doc/examples/disaggregated/cluster/ddc-sample.yaml
     ```
 
-2. 根据存算分离 K8s 部署文档中，元数据配置章节配置 metaService ； fe 集群配置章节进行 fe 终态规格配置；计算资源组配置章节进行相关资源组的配置。配置完成后，使用如下命令部署资源：
+2. 根据存算分离 `K8s` 部署文档中，元数据配置章节配置 `metaService` ； `fe` 集群配置章节进行 `fe` 终态规格配置；计算资源组配置章节进行相关资源组的配置。配置完成后，使用如下命令部署资源：
 
     ```shell
     kubectl apply -f ddc-sample.yaml
@@ -55,15 +55,15 @@
 
 !!! tip
 
-    MS 服务需要使用 FDB 作为后端元数据存储，部署 MS 服务必须部署 FDB 服务，请按照部署 FDB 文档提前部署。
+    `MS` 服务需要使用 `FDB` 作为后端元数据存储，部署 `MS` 服务必须部署 `FDB` 服务，请按照部署 `FDB` 文档提前部署。
 
 ## 3 创建远程存储后端
 
-存算分离集群搭建完毕后，需要通过客户端执行相应的 `CREATE STORAGE VAULT` SQL 语句创建存储后端来实现数据的持久化。 集群访问方式可参考 访问 Doris 集群 来连接 Doris 集群，下文提供其中一种实现方式。
+存算分离集群搭建完毕后，需要通过客户端执行相应的 `CREATE STORAGE VAULT` SQL语句创建存储后端来实现数据的持久化。 集群访问方式可参考访问 `Doris` 集群来连接 `Doris` 集群，下文提供其中一种实现方式。
 
-1. 获取 Service
+1. 获取 `Service`
 
-    在部署集群后，通过以下命令可以查看 Doris Operator 暴露的 service：
+    在部署集群后，通过以下命令可以查看 `Doris Operator` 暴露的 `service` ：
 
     ```shell
     kubectl get svc
@@ -80,15 +80,15 @@
     test-disaggregated-cluster-cg2           ClusterIP   10.96.50.199   <none>        9060/TCP,8040/TCP,9050/TCP,8060/TCP   14m
     ```
 
-2. MySQL 客户端访问
+2. `MySQL` 客户端访问
 
-    使用以下命令，可以在当前的 Kubernetes 集群中创建一个包含 mysql client 的 pod：
+    使用以下命令，可以在当前的 `Kubernetes` 集群中创建一个包含 `mysql client` 的 `pod` ：
 
     ```shell
     kubectl run mysql-client --image=mysql:5.7 -it --rm --restart=Never -- /bin/bash
     ```
 
-    在集群内的容器中，可以使用 fe 服务名访问 Doris 集群：
+    在集群内的容器中，可以使用 `fe` 服务名访问 `Doris` 集群：
 
     ```shell
     mysql -uroot -P9030 -h test-disaggregated-cluster-fe  
@@ -96,9 +96,9 @@
 
 3. 创建存储后端
 
-    创建语句语法，具体参考管理 Storage Vault。 这里提供 S3 协议对象存储的示例：
+    创建语句语法，具体参考管理 `Storage Vault` 。 这里提供 `S3` 协议对象存储的示例：
 
-    1. 创建 S3 Storage Vault
+    1. 创建 `S3 Storage Vault`
 
         ```shell
         CREATE STORAGE VAULT IF NOT EXISTS s3_vault
