--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.3 配置部署 Metaservice.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.3 配置部署 Metaservice.md
@@ -1,10 +1,10 @@
 # 1.2.3.3.3 配置部署 Metaservice
 
-MS 是 Doris 存算分离组件 MetaService 的简称，提供元数据管理和查询服务。 `DorisDisaggregatedClulster` 中配置字段为 metaService。
+`MS` 是 `Doris` 存算分离组件 `MetaService` 的简称，提供元数据管理和查询服务。 `DorisDisaggregatedClulster` 中配置字段为 `metaService` 。
 
 ## 1 最简配置
 
-MS 服务属于无状态服务，通常采用主备模式部署。最简单配置如下：
+`MS` 服务属于无状态服务，通常采用主备模式部署。最简单配置如下：
 
 ```shell
 spec:
@@ -16,11 +16,11 @@ spec:
         namespace: {namespace}
 ```
 
-其中 `{msImage}` 为想要部署的 MS 服务的版本。 `{foundationdbConfigmap}` 为 K8s 部署的 FDB 服务提供的访问 configmap 。 `{namespace}` 为 K8s 部署的 FDB 服务所在的 Namespace。
+其中 `{msImage}` 为想要部署的 `MS` 服务的版本。 `{foundationdbConfigmap}` 为 `K8s` 部署的 `FDB` 服务提供的访问 `configmap` 。 `{namespace}` 为 `K8s` 部署的 `FDB` 服务所在的 `Namespace` 。
 
 ## 2 配置资源
 
-为 MS 服务添加资源使用限制。以 4c 4Gi 配置为例：
+为 `MS` 服务添加资源使用限制。以 `4c` `4Gi` 配置为例：
 
 ```shell
 spec:
@@ -39,7 +39,7 @@ spec:
 
 ## 3 配置 FDB
 
-FDB 集群在同一套 K8s 集群上搭建，并且能够获取其所在的 namespace 和 configmap，则使用如下配置：
+`FDB` 集群在同一套 `K8s` 集群上搭建，并且能够获取其所在的 `namespace` 和 `configmap` ，则使用如下配置：
 
 ```shell
 spec:
@@ -51,7 +51,7 @@ spec:
         namespace: {namespace}
 ```
 
-若 FDB 是物理机部署，则可以通过为 metaService 配置 FDB endpoint（FDB 的访问字符串）的方式来实现 FDB 的访问。 配置如下：
+若 `FDB` 是物理机部署，则可以通过为 `metaService` 配置 `FDB endpoint`（ `FDB` 的访问字符串）的方式来实现 `FDB` 的访问。 配置如下：
 
 ```shell
 spec:
@@ -63,11 +63,11 @@ spec:
 
 ## 4 定制化配置文件
 
-K8s 上通过 ConfigMap 挂载配置文件。Doris-Operator 对于存算分离组件之间相互感知的配置进行了自动化处理，在部署 MS 服务使用定制化配置文件时 FDB 的相关的配置请不要配置。
+`K8s` 上通过 `ConfigMap` 挂载配置文件。 `Doris-Operator` 对于存算分离组件之间相互感知的配置进行了自动化处理，在部署 `MS` 服务使用定制化配置文件时 `FDB` 的相关的配置请不要配置。
 
-使用 ConfigMap 挂载配置文件部署 MS 服务：
+使用 `ConfigMap` 挂载配置文件部署 `MS` 服务：
 
-ConfigMap:
+`ConfigMap` :
 
 ```shell
 apiVersion: v1
@@ -100,7 +100,7 @@ metadata:
   namespace: default
 ```
 
-使用上述 ConfigMap 的 MS 配置如下：
+使用上述 `ConfigMap` 的 `MS` 配置如下：
 
 ```shell
 spec:
@@ -111,8 +111,8 @@ spec:
       mountPath: /etc/doris
 ```
 
-实际部署中，按照需要配置 ConfigMap 的名称以及命名空间，并将配置信息按照上述样例格式配置到需要部署的存算分离元数据管理资源中。MS 服务使用的启动配置文件名称 `doris_cloud.conf` ， 因此挂载启动配置的 ConfigMap 的 key 也必须是 `doris_cloud.conf` 。启动配置必须挂载到 `/etc/doris` 目录下，即 mountPath 为 `/etc/doris` 。
+实际部署中，按照需要配置 `ConfigMap` 的名称以及命名空间，并将配置信息按照上述样例格式配置到需要部署的存算分离元数据管理资源中。 `MS` 服务使用的启动配置文件名称 `doris_cloud.conf` ， 因此挂载启动配置的 `ConfigMap` 的 `key` 也必须是 `doris_cloud.conf` 。启动配置必须挂载到 `/etc/doris` 目录下，即 `mountPath` 为 `/etc/doris` 。
 
 !!! tip
 
-    MS 服务需要使用 FDB 作为后端元数据存储，部署 MS 服务必须部署 FDB 服务。
+    `MS` 服务需要使用 `FDB` 作为后端元数据存储，部署 `MS` 服务必须部署 `FDB` 服务。
