--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.6 在 MacOS 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.6 在 MacOS 平台上编译.md
@@ -85,4 +85,4 @@ cd installed/bin
 ./thrift --version
 ```
 
-运行 `protoc` 和 `thrift` 的时候可能会遇到无法打开，因为无法验证开发者的问题，可以到前往 `安全性与隐私` 。点按 `通用` 面板中的 `仍要打开` 按钮，以确认打算打开该二进制。参考 <https://support.apple.com/zh-cn/HT202491。>
+运行 `protoc` 和 `thrift` 的时候可能会遇到无法打开，因为无法验证开发者的问题，可以到前往**安全性与隐私**。点按**通用**面板中的**仍要打开**按钮，以确认打算打开该二进制。参考 <https://support.apple.com/zh-cn/HT202491。>
