--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.4 集群运维.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.4 集群运维.md
@@ -244,7 +244,7 @@ doriscluster-sample   available   available
 
 **验证集群节点状态**
 
-通过访问 `Doris` 集群文档提供的方式，通过 `mysql-client` 访问 `Doris` 。 使用 `show frontends` 和 `show backends` 等 `SQL` 查看各个组件的 `版本` 和 `状态` 。
+通过访问 `Doris` 集群文档提供的方式，通过 `mysql-client` 访问 `Doris` 。 使用 `show frontends` 和 `show backends` 等 `SQL` 查看各个组件的版本和状态。
 
 ```sql
 mysql> show frontends\G;
