--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.4 Doris on AWS.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.4 Doris on AWS.md
@@ -98,6 +98,6 @@
 
     * `FE` 的 `HTTP` 协议端口： `8030`
 
-    * 默认的 `root` 密码： `空`
+    * 默认的 `root` 密码：空
 
-    * 默认的 `admin` 密码： `空`
+    * 默认的 `admin` 密码：空
