--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/2 数据库连接/2.1 数据库连接.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/2 数据库连接/2.1 数据库连接.md
@@ -1,12 +1,12 @@
 # 2.1 数据库连接
 
-Apache Doris 采用 MySQL 网络连接协议，兼容 MySQL 生态的命令行工具、JDBC/ODBC 和各种可视化工具。同时 Apache Doris 也内置了一个简单的 Web UI，方便使用。下面分别介绍如何通过 MySQL Client、MySQL JDBC Connector、DBeaver 和 Doris 内置的 Web UI 来连接 Doris。
+`Apache Doris` 采用 `MySQL` 网络连接协议，兼容 `MySQL` 生态的命令行工具、 `JDBC/ODBC` 和各种可视化工具。同时 `Apache Doris` 也内置了一个简单的 `Web UI` ，方便使用。下面分别介绍如何通过 `MySQL Client` 、 `MySQL JDBC Connector` 、 `DBeaver` 和 `Doris` 内置的 `Web UI` 来连接 `Doris` 。
 
 ## 1 MySQL Client
 
-从 MySQL 官方网站下载 MySQL Client，或者下载我们提供的 Linux 上免安装的 MySQL 客户端。当前 Doris 主要兼容 MySQL 5.7 及其以上的客户端。
+从 `MySQL` 官方网站下载 `MySQL Client` ，或者下载我们提供的 `Linux` 上免安装的 `MySQL` 客户端。当前 `Doris` 主要兼容 `MySQL 5.7` 及其以上的客户端。
 
-解压下载的 MySQL 客户端，在 `bin/` 目录下可以找到 `mysql` 命令行工具。然后执行下面的命令连接 Doris。
+解压下载的 `MySQL` 客户端，在 `bin/` 目录下可以找到 `mysql` 命令行工具。然后执行下面的命令连接 `Doris` 。
 
 ```shell
 # FE_IP 为 FE 的监听地址， FE_QUERY_PORT 为 FE 的 MYSQL 协议服务的端口，在 fe.conf 中对应 query_port, 默认为 9030.
@@ -33,7 +33,7 @@ mysql>
 
 ## 2 MySQL JDBC Connector
 
-请在 MySQL 官方网站下载相应的 JDBC Connector。
+请在 `MySQL` 官方网站下载相应的 `JDBC Connector` 。
 
 连接代码示例如下：
 
@@ -59,25 +59,25 @@ try {
 
 ## 3 DBeaver
 
-创建一个到 Apache Doris 的 MySQL 连接：
+创建一个到 `Apache Doris` 的 `MySQL` 连接：
 
 ![](../../../../assets/images/Doris/DBeaver-e74120612bdbc9d4a14b79a5819ba6d5.png)
 
-在 DBeaver 中进行查询：
+在 `DBeaver` 中进行查询：
 
 ![](../../../../assets/images/Doris/DBeaver-query-11f3e80e04942de7bd200a685655da3c.png)
 
 ## 4 Doris 内置的 Web UI
 
-Doris FE 内置 Web UI。用户无须安装 MySQL 客户端，即可通过内置的 Web UI 进行 SQL 查询和其它相关信息的查看。
+`Doris FE` 内置 `Web UI` 。用户无须安装 `MySQL` 客户端，即可通过内置的 `Web UI` 进行 `SQL` 查询和其它相关信息的查看。
 
-在浏览器中输入 `http://fe_ip:fe_port` , 比如 `http://172.20.63.118:8030` ，打开 Doris 内置的 Web 控制台。
+在浏览器中输入 `http://fe_ip:fe_port` , 比如 `http://172.20.63.118:8030` ，打开 `Doris` 内置的 `Web` 控制台。
 
-内置 Web 控制台，主要供集群 root 账户使用，默认安装后 root 账户密码为空。
+内置 `Web` 控制台，主要供集群 `root` 账户使用，默认安装后 `root` 账户密码为空。
 
 ![](../../../../assets/images/Doris/Doris-WebUI-0e96b0a7f82ba3609666352a6f56b26a.png)
 
-比如，在 Playground 中，执行如下语句，可以完成对 BE 节点的添加。
+比如，在 `Playground` 中，执行如下语句，可以完成对 `BE` 节点的添加。
 
 ```sql
 ALTER SYSTEM ADD BACKEND "be_host_ip:heartbeat_service_port";
@@ -87,6 +87,6 @@ ALTER SYSTEM ADD BACKEND "be_host_ip:heartbeat_service_port";
 
 !!! warning
 
-    Playground 中执行这种和具体数据库/表没有关系的语句，务必在左侧库栏里随意选择一个数据库，才能执行成功，这个限制，稍后会去掉。
+    `Playground` 中执行这种和具体数据库/表没有关系的语句，务必在左侧库栏里随意选择一个数据库，才能执行成功，这个限制，稍后会去掉。
 
-    当前内置的 Web 控制台，还不能执行 SET 类型的 SQL 语句，所以，在 Web 控制台，当前还不能通过执行 SET PASSWORD FOR 'user' = PASSWORD('user_password') `类似语句。
+    当前内置的 `Web` 控制台，还不能执行 `SET` 类型的 `SQL` 语句，所以，在 `Web` 控制台，当前还不能通过执行 `SET PASSWORD FOR 'user' = PASSWORD('user_password')` 类似语句。
