--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.2 手动分区.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.2 手动分区.md
@@ -2,13 +2,13 @@
 
 ## 1 分区列
 
-* 分区列可以指定一列或多列，分区列必须为 KEY 列。多列分区的使用方式在后面多列分区小结介绍。
+* 分区列可以指定一列或多列，分区列必须为 `KEY` 列。多列分区的使用方式在后面多列分区小结介绍。
 
-* PARTITION 列默认必须为 NOT NULL 列，如果需要使用 NULL 列，应设置 session variable `allow_partition_column_nullable = true` 。对于 LIST PARTITION，支持真正的 NULL 分区。对于 RANGE PARTITION，NULL 值会被划归最小的 LESS THAN 分区。
+* `PARTITION` 列默认必须为 `NOT NULL` 列，如果需要使用 `NULL` 列，应设置 `session variable` `allow_partition_column_nullable = true` 。对于 `LIST PARTITION` ，支持真正的 `NULL` 分区。对于 `RANGE PARTITION` ， `NULL` 值会被划归最小的 `LESS THAN` 分区。
 
 * 不论分区列是什么类型，在写分区值时，都需要加双引号。
 
-* 分区数量理论上没有上限。但默认限制每张表 4096 个分区，如果想突破这个限制，可以修改 FE 配置 `max_multi_partition_num和max_dynamic_partition_num` 。
+* 分区数量理论上没有上限。但默认限制每张表 `4096` 个分区，如果想突破这个限制，可以修改 `FE` 配置 `max_multi_partition_num和max_dynamic_partition_num` 。
 
 * 当不使用分区建表时，系统会自动生成一个和表名同名的，全值范围的分区。该分区对用户不可见，并且不可删改。
 
@@ -16,11 +16,11 @@
 
 ## 2 Range 分区
 
-分区列通常为时间列，以方便的管理新旧数据。Range 分区支持的列类型 DATE, DATETIME, TINYINT, SMALLINT, INT, BIGINT, LARGEINT。
+分区列通常为时间列，以方便的管理新旧数据。 `Range` 分区支持的列类型 `DATE` , `DATETIME` , `TINYINT` , `SMALLINT` , `INT` , `BIGINT` , `LARGEINT` 。
 
 分区信息，支持四种写法：
 
-1. FIXED RANGE：定义分区的左闭右开区间。
+1. `FIXED RANGE` ：定义分区的左闭右开区间。
 
     ```sql
     PARTITION BY RANGE(col1[, col2, ...]) 
@@ -41,7 +41,7 @@
     )
     ```
 
-2. LESS THAN：仅定义分区上界。下界由上一个分区的上界决定。
+2. `LESS THAN` ：仅定义分区上界。下界由上一个分区的上界决定。
 
     ```sql
     PARTITION BY RANGE(col1[, col2, ...])   
@@ -64,7 +64,7 @@
     )
     ```
 
-3. BATCH RANGE：批量创建数字类型和时间类型的 RANGE 分区，定义分区的左闭右开区间，设定步长。
+3. `BATCH RANGE` ：批量创建数字类型和时间类型的 `RANGE` 分区，定义分区的左闭右开区间，设定步长。
 
     ```sql
     PARTITION BY RANGE(int_col)
@@ -92,7 +92,7 @@
     )
     ```
 
-4. MULTI RANGE：批量创建 RANGE 分区，定义分区的左闭右开区间。示例如下：
+4. `MULTI RANGE` ：批量创建 `RANGE` 分区，定义分区的左闭右开区间。示例如下：
 
     ```sql
     PARTITION BY RANGE(col)
@@ -109,7 +109,7 @@
 
 分区列支持 `BOOLEAN, TINYINT, SMALLINT, INT, BIGINT, LARGEINT, DATE, DATETIME, CHAR, VARCHAR` 数据类型，分区值为枚举值。只有当数据为目标分区枚举值其中之一时，才可以命中分区。
 
-Partition 支持通过 `VALUES IN (...)` 来指定每个分区包含的枚举值。
+`Partition` 支持通过 `VALUES IN (...)` 来指定每个分区包含的枚举值。
 
 举例如下：
 
@@ -122,7 +122,7 @@ PARTITION BY LIST(city)
 )
 ```
 
-List 分区也支持多列分区，示例如下：
+`List` 分区也支持多列分区，示例如下：
 
 ```sql
 PARTITION BY LIST(id, city)
@@ -135,9 +135,9 @@ PARTITION BY LIST(id, city)
 
 ## 4 NULL 分区
 
-PARTITION 列默认必须为 NOT NULL 列，如果需要使用 NULL 列，应设置 session variable `allow_partition_column_nullable = true` 。对于 LIST PARTITION，我们支持真正的 NULL 分区。对于 RANGE PARTITION，NULL 值会被划归最小的 LESS THAN 分区。分列如下：
+`PARTITION` 列默认必须为 `NOT NULL` 列，如果需要使用 `NULL` 列，应设置 `session variable` `allow_partition_column_nullable = true` 。对于 `LIST PARTITION` ，我们支持真正的 `NULL` 分区。对于 `RANGE PARTITION` ， `NULL` 值会被划归最小的 `LESS THAN` 分区。分列如下：
 
-1. LIST 分区
+1. `LIST` 分区
 
     ```sql
     mysql> create table null_list(
@@ -163,7 +163,7 @@ PARTITION 列默认必须为 NOT NULL 列，如果需要使用 NULL 列，应设
     1 row in set (0.18 sec)
     ```
 
-2. RANGE 分区 —— 归属最小的 LESS THAN 分区
+2. `RANGE` 分区 —— 归属最小的 `LESS THAN` 分区
 
     ```sql
     mysql> create table null_range(
@@ -191,7 +191,7 @@ PARTITION 列默认必须为 NOT NULL 列，如果需要使用 NULL 列，应设
     1 row in set (0.18 sec)
     ```
 
-3. RANGE 分区 —— 没有 LESS THAN 分区时，无法插入
+3. `RANGE` 分区 —— 没有 `LESS THAN` 分区时，无法插入
 
     ```sql
     mysql> create table null_range2(
