--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.1 概览.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.1 概览.md
@@ -2,22 +2,22 @@
 
 ## 1 创建表
 
-使用 `CREATE TABLE` 语句在 Doris 中创建一个表，也可以使用 `LIKE` 或 `AS` 子句从另一个表派生表定义。
+使用 `CREATE TABLE` 语句在 `Doris` 中创建一个表，也可以使用 `LIKE` 或 `AS` 子句从另一个表派生表定义。
 
 ## 2 表名
 
-Doris 中表名默认是大小写敏感的，可以在第一次初始化集群时配置 `lower_case_table_names` 为大小写不敏感的。默认的表名最大长度为 64 字节，可以通过配置 `table_name_length_limit` 更改，不建议配置过大。创建表的语法请参考 `CREATE TABLE` 。
+`Doris` 中表名默认是大小写敏感的，可以在第一次初始化集群时配置 `lower_case_table_names` 为大小写不敏感的。默认的表名最大长度为 `64` 字节，可以通过配置 `table_name_length_limit` 更改，不建议配置过大。创建表的语法请参考 `CREATE TABLE` 。
 
 ## 3 表属性
 
-Doris 的建表语句中可以指定建表属性，其中分桶数(buckets)、存储介质(storage_medium)、副本数(replication_num)、冷热分离存储策略(storage_policy)属性作用于分区，即分区创建之后，分区就会有自己的属性，修改表属性只对未来创建的分区生效，对已经创建好的分区不生效，关于属性更多的信息请参考修改表属性
+`Doris` 的建表语句中可以指定建表属性，其中分桶数( `buckets` )、存储介质( `storage_medium` )、副本数( `replication_num` )、冷热分离存储策略( `storage_policy` )属性作用于分区，即分区创建之后，分区就会有自己的属性，修改表属性只对未来创建的分区生效，对已经创建好的分区不生效，关于属性更多的信息请参考修改表属性
 
 ## 4 注意事项
 
 1. 数据模型不可更改，因此建表时需要选择一个合适的数据模型。
 
-2. 已经创建的分区不能修改分桶数，可以通过替换分区 来修改分桶数，可以修改动态分区未创建的分区分桶数。
+2. 已经创建的分区不能修改分桶数，可以通过替换分区来修改分桶数，可以修改动态分区未创建的分区分桶数。
 
-3. 加减 VALUE 列是轻量级实现，秒级别可以完成，加减 KEY 列或者修改数据类型是重量级操作，完成时间取决于数据量，大规模数据下尽量避免加减 KEY 列或者修改数据类型。
+3. 加减 `VALUE` 列是轻量级实现，秒级别可以完成，加减 `KEY` 列或者修改数据类型是重量级操作，完成时间取决于数据量，大规模数据下尽量避免加减 `KEY` 列或者修改数据类型。
 
-4. 可以使用层级存储将冷数据保存到 HDD 或者 S3 / HDFS。
+4. 可以使用层级存储将冷数据保存到 `HDD` 或者 `S3` / `HDFS` 。
