--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.2 数据类型.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.2 数据类型.md
@@ -1,12 +1,12 @@
 # 3.2 数据类型
 
-Apache Doris 已支持的数据类型列表如下：
+`Apache Doris` 已支持的数据类型列表如下：
 
 ## 1 数值类型
 
 | 类型名 | 存储空间（字节） | 描述 |
 | -- | -- | -- |
-| BOOLEAN | 1 | 布尔值，0 代表 false，1 代表 true。 |
+| BOOLEAN | 1 | 布尔值， 0 代表 false，1 代表 true。 |
 | TINYINT | 1 | 有符号整数，范围 [-128, 127]。 |
 | SMALLINT | 2 | 有符号整数，范围 [-32768, 32767]。 |
 | INT | 4 | 有符号整数，范围 [-2147483648, 2147483647] |
@@ -25,11 +25,11 @@ Apache Doris 已支持的数据类型列表如下：
 
 ## 3 字符串类型
 
-| 类型名 | 存储空间（字节） | 描述
+| 类型名 | 存储空间（字节） | 描述 |
 | -- | -- | -- |
-| CHAR | M | 定长字符串，M 代表的是定长字符串的字节长度。M 的范围是 1-255。
-| VARCHAR | 不定长 | 变长字符串，M 代表的是变长字符串的字节长度。M 的范围是 1-65533。变长字符串是以 UTF-8 编码存储的，因此通常英文字符占 1 个字节，中文字符占 3 个字节。
-| STRING | 不定长 | 变长字符串，默认支持 1048576 字节（1MB），可调大到 2147483643 字节（2GB）。可通过 BE 配置 string_type_length_soft_limit_bytes 调整。String 类型只能用在 Value 列，不能用在 Key 列和分区分桶列。
+| CHAR | M | 定长字符串，M 代表的是定长字符串的字节长度。M 的范围是 1-255。 |
+| VARCHAR | 不定长 | 变长字符串，M 代表的是变长字符串的字节长度。M 的范围是 1-65533。变长字符串是以 UTF-8 编码存储的，因此通常英文字符占 1 个字节，中文字符占 3 个字节。 |
+| STRING | 不定长 | 变长字符串，默认支持 1048576 字节（1MB），可调大到 2147483643 字节（2GB）。可通过 BE 配置 string_type_length_soft_limit_bytes 调整。String 类型只能用在 Value 列，不能用在 Key 列和分区分桶列。 |
 
 ## 4 半结构类型
 
@@ -45,10 +45,10 @@ Apache Doris 已支持的数据类型列表如下：
 
 | 类型名 | 存储空间（字节） | 描述 |
 | -- | -- | -- |
-| HLL | 不定长 | HLL 是模糊去重，在数据量大的情况性能优于 Count Distinct。HLL 的误差通常在 1% 左右，有时会达到 2%。HLL 不能作为 Key 列使用，建表时配合聚合类型为 HLL_UNION。用户不需要指定长度和默认值。长度根据数据的聚合程度系统内控制。HLL 列只能通过配套的 hll_union_agg、hll_raw_agg、hll_cardinality、hll_hash 进行查询或使用。
-| BITMAP | 不定长 | Bitmap 类型的列可以在 Aggregate 表、Unique 表或 Duplicate 表中使用。在 Unique 表或 Duplicate 表中使用时，其必须作为非 Key 列使用。在 Aggregate 表中使用时，其必须作为非 Key 列使用，且建表时配合的聚合类型为 BITMAP_UNION。用户不需要指定长度和默认值。长度根据数据的聚合程度系统内控制。BITMAP 列只能通过配套的 bitmap_union_count、bitmap_union、bitmap_hash、bitmap_hash64 等函数进行查询或使用。
-| QUANTILE_STATE | 不定长 | QUANTILE_STATE 是一种计算分位数近似值的类型，在导入时会对相同的 Key，不同 Value 进行预聚合，当 value 数量不超过 2048 时采用明细记录所有数据，当 Value 数量大于 2048 时采用 TDigest 算法，对数据进行聚合（聚类）保存聚类后的质心点。QUANTILE_STATE 不能作为 Key 列使用，建表时配合聚合类型为 QUANTILE_UNION。用户不需要指定长度和默认值。长度根据数据的聚合程度系统内控制。QUANTILE_STATE 列只能通过配套的 QUANTILE_PERCENT、QUANTILE_UNION、TO_QUANTILE_STATE 等函数进行查询或使用。
-| AGG_STATE | 不定长 | 聚合函数，只能配合 state/merge/union 函数组合器使用。AGG_STATE 不能作为 Key 列使用，建表时需要同时声明聚合函数的签名。用户不需要指定长度和默认值。实际存储的数据大小与函数实现有关。
+| HLL | 不定长 | HLL 是模糊去重，在数据量大的情况性能优于 Count Distinct。HLL 的误差通常在 1% 左右，有时会达到 2%。HLL 不能作为 Key 列使用，建表时配合聚合类型为 HLL_UNION。用户不需要指定长度和默认值。长度根据数据的聚合程度系统内控制。HLL 列只能通过配套的 hll_union_agg、hll_raw_agg、hll_cardinality、hll_hash 进行查询或使用。 |
+| BITMAP | 不定长 | Bitmap 类型的列可以在 Aggregate 表、Unique 表或 Duplicate 表中使用。在 Unique 表或 Duplicate 表中使用时，其必须作为非 Key 列使用。在 Aggregate 表中使用时，其必须作为非 Key 列使用，且建表时配合的聚合类型为 BITMAP_UNION。用户不需要指定长度和默认值。长度根据数据的聚合程度系统内控制。BITMAP 列只能通过配套的 bitmap_union_count、bitmap_union、bitmap_hash、bitmap_hash64 等函数进行查询或使用。 |
+| QUANTILE_STATE | 不定长 | QUANTILE_STATE 是一种计算分位数近似值的类型，在导入时会对相同的 Key，不同 Value 进行预聚合，当 value 数量不超过 2048 时采用明细记录所有数据，当 Value 数量大于 2048 时采用 TDigest 算法，对数据进行聚合（聚类）保存聚类后的质心点。QUANTILE_STATE 不能作为 Key 列使用，建表时配合聚合类型为 QUANTILE_UNION。用户不需要指定长度和默认值。长度根据数据的聚合程度系统内控制。QUANTILE_STATE 列只能通过配套的 QUANTILE_PERCENT、QUANTILE_UNION、TO_QUANTILE_STATE 等函数进行查询或使用。 |
+| AGG_STATE | 不定长 | 聚合函数，只能配合 state/merge/union 函数组合器使用。AGG_STATE 不能作为 Key 列使用，建表时需要同时声明聚合函数的签名。用户不需要指定长度和默认值。实际存储的数据大小与函数实现有关。 |
 
 ## 6 IP 类型
 
@@ -57,4 +57,4 @@ Apache Doris 已支持的数据类型列表如下：
 | IPv4 | 4 字节 | 以 4 字节二进制存储 IPv4 地址，配合 ipv4_* 系列函数使用。 |
 | IPv6 | 16 字节 | 以 16 字节二进制存储 IPv6 地址，配合 ipv6_* 系列函数使用。 |
 
-也可通过 `SHOW DATA TYPES;` 语句查看 Apache Doris 支持的所有数据类型。
+也可通过 `SHOW DATA TYPES;` 语句查看 `Apache Doris` 支持的所有数据类型。
