--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.4 自动分区.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.4 自动分区.md
@@ -6,7 +6,7 @@
 
 以时间类型分区列为例，在动态分区功能中，我们支持了按特定时间周期自动创建新分区以容纳实时数据。对于实时的用户行为日志等场景该功能基本能够满足需求。但在一些更复杂的场景下，例如处理非实时数据时，分区列与当前系统时间无关，且包含大量离散值。此时为提高效率我们希望依据此列对数据进行分区，但数据实际可能涉及的分区无法预先掌握，或者预期所需分区数量过大。这种情况下动态分区或者手动创建分区无法满足我们的需求，自动分区功能很好地覆盖了此类需求。
 
-假设我们的表 DDL 如下：
+假设我们的表 `DDL` 如下：
 
 ```sql
 CREATE TABLE `DAILY_TRADE_VALUE`
@@ -47,13 +47,13 @@ PROPERTIES (
 );
 ```
 
-该表内存储了大量业务历史数据，依据交易发生的日期进行分区。可以看到在建表时，我们需要预先手动创建分区。如果分区列的数据范围发生变化，例如上表中增加了 2022 年的数据，则我们需要通过ALTER-TABLE-PARTITION对表的分区进行更改。如果这种分区需要变更，或者进行更细粒度的细分，修改起来非常繁琐。此时我们就可以使用 AUTO PARTITION 改写该表 DDL。
+该表内存储了大量业务历史数据，依据交易发生的日期进行分区。可以看到在建表时，我们需要预先手动创建分区。如果分区列的数据范围发生变化，例如上表中增加了 `2022` 年的数据，则我们需要通过 `ALTER-TABLE-PARTITION` 对表的分区进行更改。如果这种分区需要变更，或者进行更细粒度的细分，修改起来非常繁琐。此时我们就可以使用 `AUTO PARTITION` 改写该表 `DDL` 。
 
 ## 2 语法
 
-建表时，使用以下语法填充CREATE-TABLE时的 `partition_info` 部分：
+建表时，使用以下语法填充 `CREATE-TABLE` 时的 `partition_info` 部分：
 
-1. AUTO RANGE PARTITION:
+1. `AUTO RANGE PARTITION` :
 
     ```sql
     AUTO PARTITION BY RANGE (FUNC_CALL_EXPR)
@@ -67,9 +67,9 @@ PROPERTIES (
     FUNC_CALL_EXPR ::= date_trunc ( <partition_column>, '<interval>' )
     ```
 
-    注意：在 2.1.0 版本，`FUNC_CALL_EXPR` 外围不需要被括号包围。
+    注意：在 `2.1.0` 版本，`FUNC_CALL_EXPR` 外围不需要被括号包围。
 
-2. AUTO LIST PARTITION:
+2. `AUTO LIST PARTITION` :
 
     ```sql
     AUTO PARTITION BY LIST(`partition_col`)
@@ -79,7 +79,7 @@ PROPERTIES (
 
 ### 2.1 用法示例
 
-1. AUTO RANGE PARTITION
+1. `AUTO RANGE PARTITION`
 
     ```sql
     CREATE TABLE `date_table` (
@@ -95,7 +95,7 @@ PROPERTIES (
     );
     ```
 
-2. AUTO LIST PARTITION
+2. `AUTO LIST PARTITION`
 
     ```sql
     CREATE TABLE `str_table` (
@@ -113,19 +113,19 @@ PROPERTIES (
 
 ### 2.2 约束
 
-1. 在 AUTO LIST PARTITION 中，分区名长度不得超过 50. 该长度来自于对应数据行上各分区列内容的拼接与转义，因此实际容许长度可能更短。
+1. 在 `AUTO LIST PARTITION` 中，分区名长度不得超过 `50` . 该长度来自于对应数据行上各分区列内容的拼接与转义，因此实际容许长度可能更短。
 
-2. 在 AUTO RANGE PARTITION 中，分区函数仅支持 `date_trunc` ，分区列仅支持 `DATE` 或者 `DATETIME` 类型；
+2. 在 `AUTO RANGE PARTITION` 中，分区函数仅支持 `date_trunc` ，分区列仅支持 `DATE` 或者 `DATETIME` 类型；
 
-3. 在 AUTO LIST PARTITION 中，不支持函数调用，分区列支持 `BOOLEAN`, `TINYINT`, `SMALLINT`, `INT`, `BIGINT`, `LARGEINT`, `DATE`, `DATETIME`, `CHAR`, `VARCHAR` 数据类型，分区值为枚举值。
+3. 在 `AUTO LIST PARTITION` 中，不支持函数调用，分区列支持 `BOOLEAN`, `TINYINT`, `SMALLINT`, `INT`, `BIGINT`, `LARGEINT`, `DATE`, `DATETIME`, `CHAR`, `VARCHAR` 数据类型，分区值为枚举值。
 
-4. 在 AUTO LIST PARTITION 中，分区列的每个当前不存在对应分区的取值，都会创建一个独立的新 PARTITION。
+4. 在 `AUTO LIST PARTITION` 中，分区列的每个当前不存在对应分区的取值，都会创建一个独立的新 `PARTITION` 。
 
 ### 2.3 NULL 值分区
 
-当开启 session variable `allow_partition_column_nullable` 后，LIST 和 RANGE 分区都支持 NULL 列作为分区列。当分区列实际遇到 NULL 值的插入时：
+当开启 `session variable` `allow_partition_column_nullable` 后， `LIST` 和 `RANGE` 分区都支持 `NULL` 列作为分区列。当分区列实际遇到 `NULL` 值的插入时：
 
-1. 对于 AUTO LIST PARTITION，会自动创建对应的 NULL 值分区：
+1. 对于 `AUTO LIST PARTITION` ，会自动创建对应的 `NULL` 值分区：
 
     ```sql
     mysql> create table auto_null_list(
@@ -158,7 +158,7 @@ PROPERTIES (
     1 row in set (0.20 sec)
     ```
 
-2. 对于 AUTO RANGE PARTITION，不支持 NULLABLE 列作为分区列。
+2. 对于 `AUTO RANGE PARTITION` ，不支持 `NULLABLE` 列作为分区列。
 
     ```sql
     mysql>  CREATE TABLE `range_table_nullable` (
@@ -179,7 +179,7 @@ PROPERTIES (
 
 ## 3 场景示例
 
-在使用场景一节中的示例，在使用 AUTO PARTITION 后，该表 DDL 可以改写为：
+在使用场景一节中的示例，在使用 `AUTO PARTITION` 后，该表 `DDL` 可以改写为：
 
 ```sql
 CREATE TABLE `DAILY_TRADE_VALUE`
@@ -222,26 +222,26 @@ mysql> show partitions from `DAILY_TRADE_VALUE`;
 3 rows in set (0.12 sec)
 ```
 
-经过自动分区功能所创建的 PARTITION，与手动创建的 PARTITION 具有完全一致的功能性质。
+经过自动分区功能所创建的 `PARTITION` ，与手动创建的 `PARTITION` 具有完全一致的功能性质。
 
 ## 4 与动态分区联用
 
-为使分区逻辑清晰，Doris 禁止自动分区（Auto Partition）和动态分区（Dynamic Partition）同时作用于一张表上，这种用法容易引发误用，应当以单独的自动分区功能代替。
+为使分区逻辑清晰， `Doris` 禁止自动分区（ `Auto Partition` ）和动态分区（ `Dynamic Partition` ）同时作用于一张表上，这种用法容易引发误用，应当以单独的自动分区功能代替。
 
-注意：在 Doris 2.1 的某些早期版本中，该功能未被禁止，但不推荐使用。
+注意：在 `Doris 2.1` 的某些早期版本中，该功能未被禁止，但不推荐使用。
 
 ## 5 注意事项
 
-* 如同普通分区表一样，AUTO LIST PARTITION 支持多列分区，语法并无区别。
+* 如同普通分区表一样， `AUTO LIST PARTITION` 支持多列分区，语法并无区别。
 
 * 在数据的插入或导入过程中如果创建了分区，而整个导入过程没有完成（失败或被取消），被创建的分区不会被自动删除。
 
-* 使用 AUTO PARTITION 的表，只是分区创建方式上由手动转为了自动。表及其所创建分区的原本使用方法都与非 AUTO PARTITION 的表或分区相同。
+* 使用 `AUTO PARTITION` 的表，只是分区创建方式上由手动转为了自动。表及其所创建分区的原本使用方法都与非 `AUTO PARTITION` 的表或分区相同。
 
-* 为防止意外创建过多分区，我们通过FE 配置项中的 `max_auto_partition_num` 控制了一个 AUTO PARTITION 表最大容纳分区数。如有需要可以调整该值
+* 为防止意外创建过多分区，我们通过 `FE` 配置项中的 `max_auto_partition_num` 控制了一个 `AUTO PARTITION` 表最大容纳分区数。如有需要可以调整该值
 
-* 向开启了 AUTO PARTITION 的表导入数据时，Coordinator 发送数据的轮询间隔与普通表有所不同。具体请见BE 配置项中的 `olap_table_sink_send_interval_auto_partition_factor` 。开启前移（ `enable_memtable_on_sink_node = true` ）后该变量不产生影响。
+* 向开启了 `AUTO PARTITION` 的表导入数据时， `Coordinator` 发送数据的轮询间隔与普通表有所不同。具体请见 `BE` 配置项中的 `olap_table_sink_send_interval_auto_partition_factor` 。开启前移（ `enable_memtable_on_sink_node = true` ）后该变量不产生影响。
 
-* 在使用insert-overwrite插入数据时，如果指定了覆写的 partition，则 AUTO PARTITION 表在此过程中表现得如同普通表，不创建新的分区。
+* 在使用 `insert-overwrite` 插入数据时，如果指定了覆写的 `partition` ，则 `AUTO PARTITION` 表在此过程中表现得如同普通表，不创建新的分区。
 
-* 如果导入创建分区时，该表涉及其他元数据操作（如 Schema Change、Rebalance），则导入可能失败。
+* 如果导入创建分区时，该表涉及其他元数据操作（如 `Schema Change` 、 `Rebalance` ），则导入可能失败。
