--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.6 在 MacOS 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.6 在 MacOS 平台上编译.md
@@ -8,7 +8,7 @@
 
 ## 1 环境要求
 
-* `macOS 12 (Monterey)` 及以上（ `Intel` 和 `Apple Silicon` 均支持）
+* `macOS 12 （Monterey）` 及以上（ `Intel` 和 `Apple Silicon` 均支持）
 
 * `Homebrew`
 
