--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.4 集群运维.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.4 集群运维.md
@@ -50,7 +50,7 @@ kubectl delete pod ${pod_name} --namespace ${namespace}
 
 ### 2.1 获取 DorisCluster 资源
 
-使用命令 `kubectl --namespace {namespace} get doriscluster` 获取已部署 `DorisCluster` (简称 `dcr` ) 资源的名称。本文中，我们以 `doris` 为 `namespace` .
+使用命令 `kubectl --namespace {namespace} get doriscluster` 获取已部署 `DorisCluster` （简称 `dcr` ） 资源的名称。本文中，我们以 `doris` 为 `namespace` .
 
 ```shell
 $ kubectl --namespace doris get doriscluster
