--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.1 概览.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.1 概览.md
@@ -10,7 +10,7 @@
 
 ## 3 表属性
 
-`Doris` 的建表语句中可以指定建表属性，其中分桶数( `buckets` )、存储介质( `storage_medium` )、副本数( `replication_num` )、冷热分离存储策略( `storage_policy` )属性作用于分区，即分区创建之后，分区就会有自己的属性，修改表属性只对未来创建的分区生效，对已经创建好的分区不生效，关于属性更多的信息请参考修改表属性
+`Doris` 的建表语句中可以指定建表属性，其中分桶数（ `buckets` ）、存储介质（ `storage_medium` ）、副本数（ `replication_num` ）、冷热分离存储策略（ `storage_policy` ）属性作用于分区，即分区创建之后，分区就会有自己的属性，修改表属性只对未来创建的分区生效，对已经创建好的分区不生效，关于属性更多的信息请参考修改表属性
 
 ## 4 注意事项
 
