--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.5 Windows 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.5 Windows 平台上编译.md
@@ -20,7 +20,7 @@
 
 通过使用 `WSL2` 启动的 `Linux` 子系统，选择任意 `Doris` 在 `Linux` 上的编译方式即可。
 
-* 使用 `LDB Toolchain` 编译 (推荐)
+* 使用 `LDB Toolchain` 编译（推荐）
 
 * 使用 `Docker` 开发镜像编译（推荐）
 
