--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.3 主键模型.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.3 主键模型.md
@@ -4,9 +4,9 @@
 
 主键模型提供了两种实现方式：
 
-* 写时合并 ( `merge-on-write` )。在 `1.2` 版本中，我们引入了写时合并实现，该实现会在数据写入阶段完成所有数据去重的工作，因此能够提供非常好的查询性能。自 `2.1` 版本起，写时合并经过两个大版本的打磨，已经非常成熟稳定，由于其优秀的查询性能，写时合并成为 `Unique` 模型的默认实现。
+* 写时合并 （ `merge-on-write` ）。在 `1.2` 版本中，我们引入了写时合并实现，该实现会在数据写入阶段完成所有数据去重的工作，因此能够提供非常好的查询性能。自 `2.1` 版本起，写时合并经过两个大版本的打磨，已经非常成熟稳定，由于其优秀的查询性能，写时合并成为 `Unique` 模型的默认实现。
 
-* 读时合并 ( `merge-on-read` )。在读时合并实现中，用户在进行数据写入时不会触发任何数据去重相关的操作，所有数据去重的操作都在查询或者 `compaction` 时进行。因此，读时合并的写入性能较好，查询性能较差，同时内存消耗也较高。
+* 读时合并 （ `merge-on-read` ）。在读时合并实现中，用户在进行数据写入时不会触发任何数据去重相关的操作，所有数据去重的操作都在查询或者 `compaction` 时进行。因此，读时合并的写入性能较好，查询性能较差，同时内存消耗也较高。
 
 数据更新的语义
 
