--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.4 聚合模型.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.4 聚合模型.md
@@ -44,7 +44,7 @@ PROPERTIES (
 
 这是一个典型的用户信息和访问行为的事实表。在一般星型模型中，用户信息和访问行为一般分别存放在维度表和事实表中。这里为了更加方便的解释 `Doris` 的数据模型，将两部分信息统一存放在一张表中。
 
-表中的列按照是否设置了 `AggregationType` ，分为 `Key` (维度列) 和 `Value` （指标列）。没有设置 `AggregationType` 的 `user_id` 、 `date` 、 `age` 、 `sex` 称为 `Key` ，而设置了 `AggregationType` 的称为 `Value` 。
+表中的列按照是否设置了 `AggregationType` ，分为 `Key` （维度列） 和 `Value` （指标列）。没有设置 `AggregationType` 的 `user_id` 、 `date` 、 `age` 、 `sex` 称为 `Key` ，而设置了 `AggregationType` 的称为 `Value` 。
 
 当导入数据时，对于 `Key` 列相同的行会聚合成一行，而 `Value` 列会按照设置的 `AggregationType` `进行聚合。AggregationType` 目前有以下几种聚合方式和 `agg_state` ：
 
@@ -216,7 +216,7 @@ insert into aggstate values(1,sum_state(2),group_concat_state('b'));
 insert into aggstate values(1,sum_state(3),group_concat_state('c'));
 ```
 
-此时表只有一行 ( 注意，下面的表只是示意图，不是真的可以 select 显示出来)
+此时表只有一行 （ 注意，下面的表只是示意图，不是真的可以 select 显示出来）
 
 | k1 | k2 | k3 |
 | -- | -- | -- |
