--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.9 自增列.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.9 自增列.md
@@ -435,7 +435,7 @@ select * from records_tbl order by user_id, name limit 100;
 select * from records_tbl order by user_id, name limit 100 offset 100;
 ```
 
-然而，当进行深分页查询时 ( `offset` 很大时)，即使实际需要需要的数据行很少，该方法依然会将全部数据读取到内存中进行全量排序后再进行后续处理，这种方法比较低效。可以通过自增列给每行数据一个唯一值，在查询时就可以通过记录之前页面 `unique_value` 列的最大值 `max_value` ，然后使用 `where unique_value > max_value limit rows_per_page` 的方式通过提下推谓词提前过滤大量数据，从而更高效地实现分页。
+然而，当进行深分页查询时 （ `offset` 很大时），即使实际需要需要的数据行很少，该方法依然会将全部数据读取到内存中进行全量排序后再进行后续处理，这种方法比较低效。可以通过自增列给每行数据一个唯一值，在查询时就可以通过记录之前页面 `unique_value` 列的最大值 `max_value` ，然后使用 `where unique_value > max_value limit rows_per_page` 的方式通过提下推谓词提前过滤大量数据，从而更高效地实现分页。
 
 仍然以上述业务表为例，通过在表中添加一个自增列从而赋予每一行一个唯一标识：
 
