--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.10 数据库建表最佳实践.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.10 数据库建表最佳实践.md
@@ -488,7 +488,7 @@ show partitions from tbl_unique_merge_on_write_p;
         
         * 数据随机分桶：
             
-            * 如果 `OLAP` 表没有更新类型的字段，将表的数据分桶模式设置为 `RANDOM` ，则可以避免严重的数据倾斜 (数据在导入表对应的分区的时候，单次导入作业每个 `Batch` 的数据将随机选择一个 `Tablet` 进行写入)。
+            * 如果 `OLAP` 表没有更新类型的字段，将表的数据分桶模式设置为 `RANDOM` ，则可以避免严重的数据倾斜 （数据在导入表对应的分区的时候，单次导入作业每个 `Batch` 的数据将随机选择一个 `Tablet` 进行写入）。
             
             * 当表的分桶模式被设置为 `RANDOM` 时，因为没有分桶列，无法根据分桶列的值仅对几个分桶查询，对表进行查询的时候将对命中分区的全部分桶同时扫描，该设置适合对表数据整体的聚合查询分析而不适合高并发的点查询。
             
