--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.2 前缀索引与排序键.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.2 前缀索引与排序键.md
@@ -6,7 +6,7 @@
 
 在 `Aggregate` 、 `Unique` 和 `Duplicate` 三种数据模型中。底层的数据存储，是按照各自建表语句中， `Aggregate Key` 、 `Unique Key` 和 `Duplicate Key` 中指定的列进行排序存储的。这些 `Key` ，称为排序键（ `Sort Key` ）。借助排序键，在查询时，通过给排序列指定条件， `Apache Doris` 不需要扫描全表即可快速找到需要处理的数据，降低搜索的复杂度，从而加速查询。
 
-在排序键的基础上，又引入了前缀索引（ `Prefix Index` ）。前缀索引是一种稀疏索引。表中按照相应的行数的数据构成一个逻辑数据块 ( `Data Block` )。每个逻辑数据块在前缀索引表中存储一个索引项，索引项的长度不超过 `36` 字节，其内容为数据块中第一行数据的排序列组成的前缀，在查找前缀索引表时可以帮助确定该行数据所在逻辑数据块的起始行号。由于前缀索引比较小，所以，可以全量在内存缓存，快速定位数据块，大大提升了查询效率。
+在排序键的基础上，又引入了前缀索引（ `Prefix Index` ）。前缀索引是一种稀疏索引。表中按照相应的行数的数据构成一个逻辑数据块 （ `Data Block` ）。每个逻辑数据块在前缀索引表中存储一个索引项，索引项的长度不超过 `36` 字节，其内容为数据块中第一行数据的排序列组成的前缀，在查找前缀索引表时可以帮助确定该行数据所在逻辑数据块的起始行号。由于前缀索引比较小，所以，可以全量在内存缓存，快速定位数据块，大大提升了查询效率。
 
 !!! tip
 
