--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
@@ -116,7 +116,7 @@ $ BUILD_TYPE=Debug sh build.sh
 
 !!! tip
 
-    如何查看机器是否支持 AVX2？
+    如何查看机器是否支持 `AVX2` ？
     ```shell
     $ cat /proc/cpuinfo | grep avx2
     ```
