--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
@@ -1,6 +1,6 @@
 # 1.1.2 使用 LDB Toolchain 编译（推荐）
 
-本文档主要介绍如何使用 `LDB Toolchain` 编译 `Doris` 。该方式目前作为 `Docker` 编译方式的补充，方便没有 `Docker` 环境的开发者和用户编译 `Doris` 源码。 `Doris` 目前推荐的 `LDB Toolchain` 版本为 `0.17` , 其中含有 `clang-16` 和 `gcc-11` 。
+本文档主要介绍如何使用 `LDB Toolchain` 编译 `Doris` 。该方式目前作为 `Docker` 编译方式的补充，方便没有 `Docker` 环境的开发者和用户编译 `Doris` 源码。 `Doris` 目前推荐的 `LDB Toolchain` 版本为 `0.17` ， 其中含有 `clang-16` 和 `gcc-11` 。
 
 !!! tip
 
